--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="text_no_data_found">Data Not Found</string>
     <string name="text_destination_list">Destination</string>
     <string name="text_favorite_list">Favorite</string>
+    <string name="toolbar_detail_title"> Detail Destination</string>
 </resources>
